Adding first version of the star_wars_quotes gem

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 /test/version_tmp/
 /tmp/
 
+# Ignore the rdoc generated api docs
+/html/
+
 # Used by dotenv library to load environment variables.
 # .env
 
