Seperating the publish from the build makes code etc unavailable in subsequent job

--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -45,13 +45,20 @@ jobs:
     needs: test
 
     steps:
+      - uses: actions/checkout@v3
+      - name: Set up Ruby
+      # Automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
+      # See https://github.com/ruby/setup-ruby#versioning
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.1
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: Publish to RubyGems
         run: |
           mkdir -p $HOME/.gem
           touch $HOME/.gem/credentials
           chmod 0600 $HOME/.gem/credentials
           printf -- "---\n:rubygems_api_key: ${GEM_HOST_API_KEY}\n" > $HOME/.gem/credentials
-          ls
           gem build star_wars_quotes.gemspec
           gem push *.gem --key rubygems_api_key
         env:
